fix(esl-carousel): remove specificity hack for carousel clipping

--- a/src/modules/esl-carousel/core/esl-carousel.less
+++ b/src/modules/esl-carousel/core/esl-carousel.less
@@ -30,7 +30,7 @@ esl-carousel {
     cursor: grabbing;
   }
 
-  &[animating]:not(#specific) {
+  &[animating] {
     padding-inline: 0;
     margin-inline: 0;
   }
